# brutus

./: .bazelrc  .gitignore  .nvim.lua  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bazel
.zed/: settings.json
client/: BUILD.bazel  client.go  go.mod  main.go
common/ffi/: BUILD.bazel  ffi.h
common/proto/: BUILD.bazel
scripts/: gopls-bazel-bridge.sh  rustanalyzer-bazel-bridge.sh
server/: BUILD.bazel  Cargo.toml  build.rs
server/src/: ipc.rs  lib.rs  main.rs  proto_capnp.rs
server/src/ipc/: pid.rs  pipe.rs  pty.rs
src/: BUILD.bazel  brutus.c  common.rs  lib.rs  main.rs  pane.rs  pty.rs  ui.rs  utils.rs
src/client/: BUILD.bazel  client.go  go.mod  go.sum  tools.go
src/client/internal/: BUILD.bazel
src/client/internal/ui/: ui.go
src/common/ffi/: BUILD.bazel  ffi.h
src/common/ipc/: BUILD.bazel  main.c
src/common/ipc/include/: ipc.h
src/common/ipc/src/: ipc.c  log.h  queue.c  queue.h
src/common/proto/: BUILD.bazel  command.capnp  event.capnp  proto.capnp
src/common/proto/event/: client.capnp
src/ipc/: pty.rs
src/server/: BUILD.bazel  Cargo.toml  build.rs
src/server/src/: command.rs  ffi.rs  interchange.rs  ipc.rs  lib.rs  util.rs
src/server/src/interchange/: command.rs  event.rs  proto.rs
src/server/src/ipc/: command.rs  data.rs  pid.rs  pipe.rs  pty.rs
src/server/src/ui/: pane.rs
src/ui/: pane.rs
