load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jameseidson/brutus/tree/main/client
gazelle(name = "gazelle")

alias(
    name = "brutus",
    actual = "//client:brutus",
    visibility = ["//visibility:public"],
)

alias(
    name = "gen-project-for-rust-analyzer",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
    visibility = ["//visibility:public"],
)
