load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

# gazelle:prefix github.com/jameseidson/brutus/tree/main/src/client
gazelle(name = "gazelle")

bool_flag(
    name = "use-system-capnp",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

alias(
    name = "gen-project-for-rust-analyzer",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
    visibility = ["//visibility:public"],
)
