load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_static_library")

rust_static_library(
    name = "lib",
    srcs = glob(["src/**/*.rs"]),
    rustc_env = {
        "BAZEL_RUST_PROTO_MODULE": "$(execpath :proto)/proto_capnp.rs",
    },
    visibility = ["//visibility:public"],
    deps = all_crate_deps() + [":proto"],
)

cargo_build_script(
    name = "proto",
    srcs = ["build.rs"],
    build_script_env = {
        "BAZEL_CAPNP_COMPILER_PATH": "$(execpath @capnproto-cpp-1.0.2//:compiler)",
        "BAZEL_PROTO_GO_INCLUDE_PATH": "$(execpath @org_capnproto_go_capnp_v3//:std)",
        "BAZEL_PROTO_SRC_PATH": "$(execpath //common/proto:proto)",
    },
    data = [
        "//common/proto",
        "@capnproto-cpp-1.0.2//:compiler",
        "@org_capnproto_go_capnp_v3//:std",
    ],
    visibility = ["//visibility:private"],
    deps = ["@crate_index__capnpc-0.19.0//:capnpc"],
)
