load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["client.go"],
    cgo = True,
    importpath = "github.com/jameseidson/brutus/client",
    visibility = ["//visibility:public"],
    deps = [
        ":proto",
        "//src/client/internal:pkg-ui",
        "@org_capnproto_go_capnp_v3//:capnp",
    ],
)

go_library(
    name = "proto",
    srcs = [":proto-go-src"],
    importpath = "github.com/jameseidson/brutus/common/proto",
    visibility = ["//visibility:private"],
    deps = [
        "@org_capnproto_go_capnp_v3//:capnp",
        "@org_capnproto_go_capnp_v3//encoding/text",
        "@org_capnproto_go_capnp_v3//schemas",
    ],
)

genrule(
    name = "proto-go-src",
    srcs = [
        "//src/common/proto",
        "@org_capnproto_go_capnp_v3//:std",
        "@org_capnproto_go_capnp_v3//capnpc-go",
    ] + select({
        "//src/common/proto:use-system-capnp": [],
        "//conditions:default": ["@capnproto-cpp-1.0.2//:compiler"],
    }),
    outs = ["proto.capnp.go"],
    cmd = select({
        "//src/common/proto:use-system-capnp": "capnp",
        "//conditions:default": "$(execpath @capnproto-cpp-1.0.2//:compiler)",
    }) + " compile -I $(execpath @org_capnproto_go_capnp_v3//:std) --src-prefix=src/common/proto -o$(execpath @org_capnproto_go_capnp_v3//capnpc-go:capnpc-go):$(RULEDIR) $(execpaths //src/common/proto)",
    visibility = ["//visibility:private"],
)
