[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "1.0", features = ["os-ext", "os-poll"] }
log = "0.4"
simplelog = "0.12"
nix = { version = "0.29", features = ["term", "user", "process", "zerocopy"] }
termion = "3.0"
slab = "0.4"
kanal = "0.1.0-pre8"
log-panics = "2.1"
capnp = "0.19"

[build-dependencies]
capnpc = "0.19"
