filegroup(
    name = "proto",
    srcs = glob(["**/*.capnp"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "proto-root",
    srcs = ["proto.capnp"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "use-system-capnp",
    flag_values = {
        "//:use-system-capnp": "true",
    },
    visibility = ["//visibility:public"],
)
