filegroup(
    name = "proto",
    srcs = ["proto.capnp"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "command",
    srcs = ["command.capnp"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "event",
    srcs = ["event.capnp"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "use-system-capnp",
    flag_values = {
        "//:use-system-capnp": "true",
    },
    visibility = ["//visibility:public"],
)
